--- a/polls/templates/polls/edit_caruser.html
+++ b/polls/templates/polls/edit_caruser.html
@@ -21,7 +21,7 @@
 		<p>{{ item.gender }}</p>
 		<label for="gender">Gender:</label>
 		<div class="group">
-			<input type="radio" name="gender" value="male" checked="checked"> Male
+			<input type="radio" name="gender" value="male"> Male
 	  		<input type="radio" name="gender" value="female" > Female
 		</div>
 		<br />
