modify user center page

--- a/polls/templates/polls/user_center.html
+++ b/polls/templates/polls/user_center.html
@@ -1,18 +1,18 @@
 <h1>User Center of {{ user.username }}</h1>
-{% if current_caruser_list %}
-	{% for item in current_caruser_list %}
-		<label for="gender">Gender:</label>
-		<label name="gender">{{ item.gender }}</label>
-		<br />
-		<label for="self_introduce">Self Introduce:</label>
-		<p name="self_introduce">{{ item.self_introduce }}</p>
-		<br />
-		<label for="birthday">Birthday:</label>
-		<label name="birthday">{{ item.birthday }}</label>
-	{% endfor %}
-{% else %}
-	<p>There's something wrong in getting CarUser.</p>
-{% endif %}
+<label>First Name</label>
+<label id='fname'>{{user.first_name}}</label>
+<br>
+<label>Last Name</label>
+<label id="lname">{{user.last_name}}</label>
+<br>
+<label>Gender</label>
+<span id='gender'>{{current.gender}}</span>
+<br>
+<label>Birthday</label>
+<span id="birthday">{{current.birthday}}</span>
+<br>
+<label>Intro</label>
+<p id="self_introduce">{{current.self_introduce}}</p>
 <br /><br />
 <li>
 	<a href="http://127.0.0.1:8000/polls/edit/">Edit</a>
