--- a/polls/templates/polls/user_center.html
+++ b/polls/templates/polls/user_center.html
@@ -1,9 +1,17 @@
+<style type="text/css">
+label {
+	color: #555;
+}
+span, p {
+	color: #b1b2c3;
+}
+</style>
 <h1>User Center of {{ user.username }}</h1>
 <label>First Name</label>
-<label id='fname'>{{user.first_name}}</label>
+<span id='fname'>{{user.first_name}}</span>
 <br>
 <label>Last Name</label>
-<label id="lname">{{user.last_name}}</label>
+<span id="lname">{{user.last_name}}</span>
 <br>
 <label>Gender</label>
 <span id='gender'>{{current.gender}}</span>
